force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Document__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Document__c</fullName>
    <formula>IF(
  AND( LEN(echosign_dev1__SignedPDF__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Signed&apos; ) ), HYPERLINK( echosign_dev1__SignedPDF__c ,   IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&apos;, &apos;PDF&apos;) &amp; &apos; &apos; &amp; Name  &amp; &apos; - signed.pdf&apos;), 

IF( AND( LEN(echosign_dev1__SignedPDF__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Approved&apos; ) ), HYPERLINK( echosign_dev1__SignedPDF__c ,   IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&apos;, &apos;PDF&apos;) &amp; &apos; &apos; &amp; Name  &amp; &apos; - approved.pdf&apos;), &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document</label>
    <type>Text</type>
</CustomField>