force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Partner_Server_URL__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Partner_Server_URL__c</fullName>
    <formula>$Api.Partner_Server_URL_70</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Server URL</label>
    <type>Text</type>
</CustomField>