force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__StatusVisible__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__StatusVisible__c</fullName>
    <formula>CASE(
  TEXT(echosign_dev1__Status__c), 
  &apos;Waiting for Counter-Signature&apos;, &apos;Out for Signature&apos;, 
  &apos;Pre-Send&apos;, &apos;Not Yet Sent for Signature&apos;,
  TEXT(echosign_dev1__Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>